--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 .DS_Store
+build/esp32.esp32.esp32doit-devkit-v1/Thing.ino.bin
+build/esp32.esp32.esp32doit-devkit-v1/Thing.ino.bootloader.bin
+build/esp32.esp32.esp32doit-devkit-v1/Thing.ino.elf
+build/esp32.esp32.esp32doit-devkit-v1/Thing.ino.map
+build/esp32.esp32.esp32doit-devkit-v1/Thing.ino.partitions.bin
